--- a/web/index.html
+++ b/web/index.html
@@ -1,51 +1,10 @@
 <html>
     <head>
-        <title>Top cities in Bulgaria</title>
+        <title>I Love SoftUni</title>
     </head>
-    <body>
-        <h3>Top cities in Bulgaria</h3>
+    <body style="text-align: center;">
+        <img src="university-default-og.png" />
         <br />
-        <table>
-            <tr>
-                <td>Burgas</td>
-                <td>203017</td>
-            </tr>
-            <tr>
-                <td>Dobrich</td>
-                <td>86292</td>
-            </tr>
-            <tr>
-                <td>Pleven</td>
-                <td>99628</td>
-            </tr>
-            <tr>
-                <td>Plovdiv</td>
-                <td>341625</td>
-            </tr>
-            <tr>
-                <td>Ruse</td>
-                <td>145765</td>
-            </tr>
-            <tr>
-                <td>Sliven</td>
-                <td>87895</td>
-            </tr>
-            <tr>
-                <td>Sofia</td>
-                <td>1307376</td>
-            </tr>
-            <tr>
-                <td>Stara Zagora</td>
-                <td>148443</td>
-            </tr>
-            <tr>
-                <td>Varna</td>
-                <td>334466</td>
-            </tr>
-            <tr>
-                <td>Veliko Tarnovo</td>
-                <td>73508</td>
-            </tr>
-        </table>
+        <h3>My SoftUni ID: @iatanasov77</h3>
     </body>
 </html>
